Add google oauth authentication support
