# backend/src/main/java/com/keith/battlereadyshelf/armycollection/ArmyCollectionsController.java
@@ -2,6 +2,7 @@ package com.keith.battlereadyshelf.armycollection;
 
 import com.keith.battlereadyshelf.generated.api.ArmyCollectionsApi;
 import com.keith.battlereadyshelf.generated.model.ArmyCollection;
+import com.keith.battlereadyshelf.security.AuthenticatedUserProvider;
 
 import lombok.RequiredArgsConstructor;
 
@@ -14,16 +15,20 @@ import java.util.List;
 @RequiredArgsConstructor
 public class ArmyCollectionsController implements ArmyCollectionsApi {
     private final ArmyCollectionsService armyCollectionsService;
+    private final AuthenticatedUserProvider authenticatedUserProvider;
 
     @Override
     public ResponseEntity<List<ArmyCollection>> getArmyCollections() {
-        var armyCollections = armyCollectionsService.getAllArmyCollections();
+        var currentUser = authenticatedUserProvider.getCurrentUser();
+        var armyCollections = armyCollectionsService.getAllArmyCollections(currentUser.id());
         return ResponseEntity.ok(armyCollections);
     }
 
     @Override
     public ResponseEntity<ArmyCollection> createArmyCollection(ArmyCollection armyCollection) {
-        var createdArmyCollection = armyCollectionsService.createArmyCollection(armyCollection);
+        var currentUser = authenticatedUserProvider.getCurrentUser();
+        var createdArmyCollection =
+                armyCollectionsService.createArmyCollection(currentUser.id(), armyCollection);
         return ResponseEntity.status(201).body(createdArmyCollection);
     }
 }
